[package]
name = "ullvm"
version = "0.1.0"
authors = ["William Tange <will@tan.ge>"]
edition = "2021"
readme = "README.md"
homepage = "https://tan.ge/ullvm"
repository = "https://github.com/s1gtrap/ullvm"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]

console_error_panic_hook = "0.1.7"
dioxus = { version = "0.5.1", features = ["web"] }
dioxus-logger = "0.5.0"
js-sys = "0.3.69"
llvm-ir = { git = "https://github.com/s1gtrap/llvm-ir.git", features = [
  "llvm-17",
  "json",
], rev = "c1291d52971b474f0e4297831e81f9327948243a" }
serde_json = "1.0.117"
tracing = "0.1.40"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
